# QuantiPy-Polarity

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: quantipy-debug-fov.md  quantipy-front-qc.md  quantipy-run.md
.github/workflows/: ci-nightly.yml  ci.yml
data/validation/: qp_results.parquet
demo/: SHA256SUMS.txt  config.yaml  fov_A_mask.tif  fov_A_membrane.tif  fov_B_mask.tif  fov_B_membrane.tif
docs/: api-reference.md  cli-reference.md  concepts.md  developer-workflow.md  interactive-viewer.md  migration-front.md  pipeline.md  validation.md
scripts/: generate_demo_bundle.py
src/quantipy_polarity/: __init__.py  _cli_analyze.py  _cli_debug.py  _cli_download_demo.py  _cli_figures.py  _cli_front.py  _cli_ingest.py  _cli_init_config.py  _cli_polarity.py  _cli_report.py  _cli_run.py  _cli_segment.py  _cli_validate.py  _stubs.py  _version.py  cli.py  config.py  contracts.py
tests/: __init__.py  conftest.py  test_cli_help.py  test_cli_init_config.py  test_cli_polarity.py  test_cli_stubs.py  test_config.py  test_contracts.py  test_e2e_masks_pipeline.py  test_io_common.py  test_io_masks.py  test_polarity_pca_basic.py  test_polarity_pca_recovery.py  test_polarity_per_cell.py
tests/cli/: test_cli_analyze.py  test_cli_debug.py  test_cli_download_demo.py  test_cli_figures.py  test_cli_front.py  test_cli_ingest.py  test_cli_report.py  test_cli_run.py  test_cli_segment.py  test_cli_validate.py
tests/experimental/: test_magnitude_vs_distance.py  test_polarity_by_condition.py
tests/fixtures/: __init__.py  _build.py  synthetic_fov.npz
tests/interactive/: test_build_viewer.py
tests/io/: __init__.py  test_ingest.py  test_nd2.py  test_tif.py
tests/migration/: test_distance.py  test_front_detect.py  (+1 more)
(+64 files in other folders)
