[project]
name = "quantipy-polarity"
version = "0.1.1"
description = "Single-shot planar polarity quantification from raw microscopy images"
readme = "README.md"
authors = [{name = "mst36", email = "taggartmc@pennmedicine.upenn.edu"}]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "click>=8.1,<9",
  "pydantic>=2.5,<3",
  "pyyaml>=6.0,<7",
  "structlog>=24.1,<26",
  "numpy>=1.26,<2.3",
  "scipy>=1.11,<1.16",
  "pandas>=2.1,<2.4",
  "pyarrow>=14,<19",
  "scikit-image>=0.22,<0.25",
  "tifffile>=2024.1,<2027",
  "tqdm>=4.66,<5",
  "requests>=2.31,<3",
  "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
  "pytest-cov>=4.1,<7",
  "ruff>=0.3,<1",
]
# Heavy algorithm deps (segmentation, rendering) are opt-in via [pipeline].
pipeline = [
  "nd2reader>=3.3,<4",
  "cellpose>=3.0,<4",
  "matplotlib>=3.8,<4",
]

[project.scripts]
quantipy = "quantipy_polarity.cli:main"

[project.urls]
Repository = "https://github.com/mcleanT/QuantiPy-Polarity"
Issues = "https://github.com/mcleanT/QuantiPy-Polarity/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantipy_polarity"]
include = ["src/quantipy_polarity/data/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
